--- a/index.html
+++ b/index.html
@@ -47,6 +47,38 @@
                     parent.postMessage(Krux.segments, 'https://dev.trademe.nz:5000');
                 }, 500);
             })();
+
+        </script>
+        <script>
+
+            //listen for data being sent from TM via the sandbox
+            (function() {
+                // window.addEventListener('grabMessage', (event: MessageEvent ) => {
+                //     if (
+
+                //     )
+                // })
+
+                window.addEventListener('message', function(e) {
+                    console.log(e.origin); // outputs "http://www.example.com/"
+                    console.log(e.data.msg); // outputs "works!"
+                    // if (e.origin === 'https://example1.com') {
+                    //     // do something
+                    // }
+                }, false);
+
+            })();
+
+            //then send to Krux
+                // // Note: Requires JavaScript ControlTag to be deployed on the page
+                // // BEGIN AJAX ControlTag for "Trade Me"
+                // Krux('ns:trademe', 'page:load', function(err) {
+                // /* Optional, called just after the tags are finished loading.
+                //     If err is not null, then something went wrong. (err will be an instanceof Error or null.)
+                // */
+                // }, {pageView: true /* Set to false if you don't want this counted as a page view. */});
+                // // END AJAX ControlTag
+
         </script>
     </body>
 </html>
