--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 // })
 
                 window.addEventListener('message', function(e) {
-                    console.log(e.origin); // outputs "http://www.example.com/"
-                    console.log(e.data.msg); // outputs "works!"
+                    console.log('origin', e.origin); // outputs "http://www.example.com/"
+                    console.log('event', e); // outputs "works!"
                     // if (e.origin === 'https://example1.com') {
                     //     // do something
                     // }
