--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 window.addEventListener('message', function(e) {
                     console.log('origin', e.origin); // outputs "http://www.example.com/"
-                    console.log('event', e); // outputs "works!"
+                    console.log('event', e.data); // outputs "works!"
                     // if (e.origin === 'https://example1.com') {
                     //     // do something
                     // }
