--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <title>Control tag page</title>
         <!-- BEGIN ControlTag for "Trade Me" -->
-
         <script async class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0">
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
@@ -12,23 +11,6 @@
             }());
         </script>
         <!-- END ControlTag -->
-
-        <script>
-                //function sendToKrux() {
-                (function(){
-                    window.dataLayer = {0: 'something', 1: 'test'};
-                    console.log('send please');
-                    // Note: Requires JavaScript ControlTag to be deployed on the page
-                    // BEGIN AJAX ControlTag for "Trade Me"
-                    Krux('ns:trademe', 'page:load', function(err) {
-                    /* Optional, called just after the tags are finished loading.
-                        If err is not null, then something went wrong. (err will be an instanceof Error or null.)
-                    */
-                    }, {pageView: true /* Set to false if you don't want this counted as a page view. */});
-                    // END AJAX ControlTag
-                //}
-                })();
-        </script>
     </head>
     <body>
         <script class="kxint" data-namespace="trademe">
@@ -95,10 +77,17 @@
 
             })();
 
-            
-
-            
-
+            function sendToKrux() {
+                console.log('send please');
+                // Note: Requires JavaScript ControlTag to be deployed on the page
+                // BEGIN AJAX ControlTag for "Trade Me"
+                Krux('ns:trademe', 'page:load', function(err) {
+                /* Optional, called just after the tags are finished loading.
+                    If err is not null, then something went wrong. (err will be an instanceof Error or null.)
+                */
+                }, {pageView: true /* Set to false if you don't want this counted as a page view. */});
+                // END AJAX ControlTag
+            }
         </script>
     </body>
 </html>
