switching controltag to test

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <title>Control tag page</title>
-        <!-- BEGIN ControlTag for "Trade Me" -->
-        <script async class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0">
+        <!-- BEGIN ControlTag for "Trade Me Test" -->
+        <script class="kxct" data-id="J7iwbVZL" data-timing="async" data-version="3.0" type="text/javascript">
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
-                var k=document.createElement('script');k.type='text/javascript';k.async=true;
-                k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
-                var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
+            var k=document.createElement('script');k.type='text/javascript';k.async=true;
+            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
+            var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
         </script>
         <!-- END ControlTag -->
