--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Control tag page</title>
         <script>
             //window.dataLayer = [{"userId":null,"dpId":null,"email":null,"listingId":2379369044,"title":"Daffy Duck Triptych Limited Edition Etching","categoryLevel1":"antiques-collectables","categoryLevel2":"movie-tv-memorabilia","categoryLevel3":"other","mcat":"187-6216-6231-","newOrUsed":"used","auctionOrClassified":"auction","sellerId":"m3/QrqJgqdFCSljgvyJJTXyBWcZspFcwH2U1BlBAWas=","sellerRegion":"Auckland","sellerDistrict":"Auckland City","sellerInTrade":"false","isBuyNow":"true","isPayNow":"false","isAfterpay":"false","buyNowPrice":500,"mustPickUp":"false","freeShipping":"false","url":"/Antiques-collectables/Movie-TV-memorabilia/Other/auction-listing-page","isExpired":false,"hasVideo":false,"hasPhotos":true,"tracked":true,"pageName":"marketplace_listing_page","isFeatured":true,"isSuperFeatured":true,"hasGtinCode":"false","wasPrice":0,"businessLine":"marketplace","band":"G04","propertyMapShown":false,"propertyMapHasSchoolsView":false,"propertyMapHasBoundaryView":false,"propertyMapHasStreetView":false,"jobsAgent":false,"showLuckyOrange":false,"abTestEventId":"307eaaf8-4b78-4b24-a7b0-a7349336d5df"},{"optOut":false},{"HarmonisationExperimentName":"HarmonisationExperiment1","HarmonisationExperimentVariant":"HarmonisationExperiment1CombinedVariant"},{"showLuckyOrange":false},{"gtm.start":1572907652467,"event":"gtm.js","gtm.uniqueEventId":0},{"event":"gtm.dom","gtm.uniqueEventId":2},{"event":"gtm.load","gtm.uniqueEventId":3}];
+            console.log('on init ', window.dataLayer);
         </script>
 
         <!-- BEGIN ControlTag for "Trade Me Test" -->
@@ -49,7 +50,7 @@
                     }
                     clearInterval(intervalID);
                     //parent.postMessage(Krux.segments, 'https://dev.trademe.nz:5000');
-                    parent.postMessage(Krux.segments, 'https://6a.test.trademe.nz');
+                    parent.postMessage(Krux.segments, 'https://www.test6a.trademe.co.nz/a/);
                 }, 500);
             })();
 
@@ -58,15 +59,11 @@
 
             //listen for data being sent from TM via the sandbox
             (function() {
-                // window.addEventListener('grabMessage', (event: MessageEvent ) => {
-                //     if (
-
-                //     )
-                // })
-
                 window.addEventListener('message', function(e) {
                     //if (e.origin === 'https://dev.trademe.nz:5000') {
-                    if (e.origin === 'https://6a.test.trademe.nz') {
+                    console.log('grabbing message');
+
+                    if (e.origin === 'https://www.test6a.trademe.co.nz/a/') {
                         console.log('origin', e.origin); // outputs "http://www.example.com/"
                         console.log('event', e.data); // outputs "works!"
                         
@@ -74,10 +71,9 @@
                         if ((e.data != null) && (typeof e.data === 'object') && (!!JSON.stringify(e.data))) {
                             console.log("data is okay");
                             window.dataLayer = e.data;
+                            console.log("DL ", window.dataLayer);
                             sendToKrux(); 
                         }
-
-                        
                     }
                 }, false);
 
