updating url from post message

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     console.log('event', e);
                     console.log('origin', e.origin); // outputs "http://www.example.com/"
 
-                    if (e.origin === 'https://www.test6a.trademe.co.nz/a/') {
+                    if (e.origin === 'https://www.test6a.trademe.co.nz') {
                         
                         console.log('event', e.data); // outputs "works!"
                         console.log('e.data is... ', typeof e.data);
