changing to test environment

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         return;
                     }
                     clearInterval(intervalID);
-                    parent.postMessage(Krux.segments, 'https://www.trademe.co.nz/a/');
+                    parent.postMessage(Krux.segments, 'https://www.test6a.trademe.co.nz/a/');
                 }, 500);
             })();
 
