--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </script>
         <script>
             (function () {
+                console.log("krux segments", Krux.segments);
                 let intervalID = setInterval(() => {
                     if (Krux.segments.length == 0) {
                         return;
