--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         return;
                     }
                     clearInterval(intervalID);
-                    parent.postMessage(Krux.segments, 'https://dev.trademe.nz:5000');
+                    parent.postMessage(Krux.segments, 'https://dev.trademe.co.nz:5000/a/');
                 }, 500);
             })();
         </script>
