--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                             return;
                         }
                         clearInterval(intervalID);
+                        //parent.postMessage(Krux.segments, parentWindow + "/a/");
                         // Making sure this will continue to work when the url for FrEnd changes
                         parent.postMessage(Krux.segments, parentWindow);
-                        parent.postMessage(Krux.segments, parentWindow + "/a/");
                     }, 500);
                 }
             })();
