--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     console.log('origin', e.origin);
                     console.log('endswith ', e.origin.endsWith('trademe.co.nz'));
 
-                    if (e.origin.endsWith('trademe.co.nz')) {
+                    if (e.origin.endsWith('trademe.co.nz:5000')) {
                         
                         console.log('event', e.data); // outputs "works!"
                         // console.log('e.data is... ', typeof e.data);
