--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
                 var k=document.createElement('script');k.type='text/javascript';k.async=true;
-                k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
+                k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
                 var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
         </script>
