removing segments functionality

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
     <head>
         <title>Control Tag</title>
         <!-- BEGIN ControlTag for "Trade Me" -->
-        <script async class="kxct" data-id="J7iwbVZL" data-timing="async" data-version="3.0">
+        <!-- <script async class="kxct" data-id="J7iwbVZL" data-timing="async" data-version="3.0">
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
                 var k=document.createElement('script');k.type='text/javascript';k.async=true;
                 k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
                 var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
-        </script>
+        </script> -->
         <!-- END ControlTag -->
     </head>
     <body>
-        <script class="kxint" data-namespace="trademe">
+        <!-- <script class="kxint" data-namespace="trademe">
             window.Krux||((Krux=function(){Krux.q.push(arguments);}).q=[]);
             (function(){
               function retrieve(n){
@@ -50,7 +50,7 @@
                     }, 500);
                 }
             })();
-        </script>
+        </script> -->
 
 
         <!-- listening for data from TM then sending to krux -->
