changing to prod control tag

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 
         </script>
 
-        <script>
+        <script class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0" type="text/javascript">
             //adding script
             console.log('adding control tag script');
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
             var k=document.createElement('script');k.type='text/javascript';k.async=true;
-            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
+            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
             var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
         </script>
