--- a/index.html
+++ b/index.html
@@ -12,62 +12,7 @@
         </script> -->
         <!-- END ControlTag -->
         <script>
-            window.dataLayer = [
-            {
-                "gtm.start": 1578361863381,
-                "event": "gtm.js",
-                "gtm.uniqueEventId": 11
-            },
-            {
-                "applePay": false,
-                "applePayCard": false,
-                "event": "frend-apple-pay-support",
-                "userId": "",
-                "frendVersion": "4cbe6bd8d44e",
-                "gtm.uniqueEventId": 2
-            },
-            {
-                "businessLine": "property"
-            },
-            {
-                "categoryLevel1": "trade-me-property",
-                "categoryLevel2": "residential",
-                "categoryLevel3": "for-sale",
-                "category": "/Trade-Me-Property/Residential/For-Sale",
-                "canonicalPath": "/property/residential/sale/waikato/hamilton/frankton/listing/1809228979",
-                "vertical": "property",
-                "name": "Residential for sale",
-                "id": 1809228979,
-                "mcat": "0350-5748-3399-",
-                "auctionOrClassified": "classified",
-                "region": "Waikato",
-                "district": "Hamilton",
-                "isClosed": "false",
-                "sellerRegion": "Auckland",
-                "sellerDistrict": "Manukau",
-                "sellerInTrade": "false",
-                "hasPhotos": "true",
-                "hasVideo": "false",
-                "newOrUsed": "used",
-                "hasBuyNow": "false",
-                "hasPayNow": "false",
-                "freeShipping": "false",
-                "mustPickUp": "false",
-                "url": "/property/residential/sale/waikato/hamilton/frankton/listing/1809228979",
-                "event": "pageView",
-                "userId": "",
-                "frendVersion": "4cbe6bd8d44e",
-                "gtm.uniqueEventId": 5
-            },
-            {
-                "event": "gtm.dom",
-                "gtm.uniqueEventId": 9
-            },
-            {
-                "event": "gtm.load",
-                "gtm.uniqueEventId": 12
-            }
-            ]
+            window.dataLayer = [{"gtm.start":1578361863381,"event":"gtm.js","gtm.uniqueEventId":11},{"applePay":false,"applePayCard":false,"event":"frend-apple-pay-support","userId":"","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":2},{"businessLine":"property"},{"categoryLevel1":"trade-me-property","categoryLevel2":"residential","categoryLevel3":"for-sale","category":"/Trade-Me-Property/Residential/For-Sale","canonicalPath":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","vertical":"property","name":"Residential for sale","id":1809228979,"mcat":"0350-5748-3399-","auctionOrClassified":"classified","region":"Waikato","district":"Hamilton","isClosed":"false","sellerRegion":"Auckland","sellerDistrict":"Manukau","sellerInTrade":"false","hasPhotos":"true","hasVideo":"false","newOrUsed":"used","hasBuyNow":"false","hasPayNow":"false","freeShipping":"false","mustPickUp":"false","url":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","event":"pageView","userId":"","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":5},{"event":"gtm.dom","gtm.uniqueEventId":9},{"event":"gtm.load","gtm.uniqueEventId":12}];
         </script>
     </head>
     <body>
