--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
             }());
         </script> -->
         <!-- END ControlTag -->
+        <script class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0" type="text/javascript">
+            //adding script
+            console.log('adding control tag script');
+            window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
+            (function(){
+            var k=document.createElement('script');k.type='text/javascript';k.async=true;
+            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
+            var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
+            }());
+        </script>
         <script>
             window.dataLayer = [{"gtm.start":1578361863381,"event":"gtm.js","gtm.uniqueEventId":11},{"applePay":false,"applePayCard":false,"event":"frend-apple-pay-support","userId":"","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":2},{"businessLine":"property"},{"categoryLevel1":"trade-me-property","categoryLevel2":"residential","categoryLevel3":"for-sale","category":"/Trade-Me-Property/Residential/For-Sale","canonicalPath":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","vertical":"property","name":"Residential for sale","id":1809228979,"mcat":"0350-5748-3399-","auctionOrClassified":"classified","region":"Waikato","district":"Hamilton","isClosed":"false","sellerRegion":"Auckland","sellerDistrict":"Manukau","sellerInTrade":"false","hasPhotos":"true","hasVideo":"false","newOrUsed":"used","hasBuyNow":"false","hasPayNow":"false","freeShipping":"false","mustPickUp":"false","url":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","event":"pageView","userId":"","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":5},{"event":"gtm.dom","gtm.uniqueEventId":9},{"event":"gtm.load","gtm.uniqueEventId":12}];
         </script>
@@ -100,22 +110,12 @@
                 */
                     if(err){console.log('Krux error='+err)}
 
-                }, {pageView: true /* Set to false if you don't want this counted as a page view. */});
+                }, {pageView: false /* Set to false if you don't want this counted as a page view. */});
                 // END AJAX ControlTag
             }
 
         </script>
 
-        <script class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0" type="text/javascript">
-            //adding script
-            console.log('adding control tag script');
-            window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
-            (function(){
-            var k=document.createElement('script');k.type='text/javascript';k.async=true;
-            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
-            var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
-            }());
-        </script>
     </body>
 
 </html>
