--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 // ////
             }
 
-            var sendUserId = (function() {
+            function sendUserId() {
                 console.log('send user ID function');
                 var memberIdSent = false;
                 console.log("memberIdSent: ", memberIdSent);
@@ -139,7 +139,7 @@
                         Krux.segments = retrieve('segs') ? retrieve('segs').split(',') : [];
                     }
                 };
-            })();
+            }
 
             //sending event data when user interacts with a tool
             // function toolTracking(evttype, tgt) {
